structural-typing/tests/ui/select_number_literal.stderr
error: Invalid syntax in select!: '123'. Expected: field or ?field
  --> tests/ui/select_number_literal.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
11 |     type Invalid = user::select!(123);
   |                    ------------------ in this macro invocation
   |
   = note: this error originates in the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
